--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0096)file:///C:/Users/%E6%80%92%E6%98%9F/AppData/Local/Temp/crossnote2023109-14276-12z39s2.rby1h.html -->
+<!-- saved from url=(0096)file:///C:/Users/%E6%80%92%E6%98%9F/AppData/Local/Temp/crossnote20231010-2092-1b8fiq.mmx9lj.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>真题知识点</title>
       
@@ -28,13 +28,41 @@
       
 <h1 id="背">🙄背 </h1>
 <h2 id="名词解释">🎈名词解释 </h2>
+<h3 id="反应扩散">💢反应扩散 </h3>
+<ul>
+<li>当某种元素通过扩散，自金属表面向内部渗透时，若该扩散元素的含量超过基体金属的溶解度，则<strong>随着扩散的进行会在金属表层形成中间相(也可能是另一种固溶体)</strong>，这种通过扩散形成新相的现象称为反应扩散或相变扩散。</li>
+</ul>
+<h3 id="派纳力">💢派纳力 </h3>
+<ul>
+<li>由于点阵结构的周期性，当位错沿滑移面运动时，位错<strong>中心的能量也要发生周期性的变化</strong>，实际上就是点阵结构的周期性阻碍位错运动的力。这点阵阻力称为派纳力。</li>
+</ul>
+<h3 id="弹性滞后">💢弹性滞后 </h3>
+<ul>
+<li>由于应变落后于应力，在δ-ε曲线上使<strong>加载线与卸载线不重合而形成一封闭回线</strong>，称之为弹性滞后。</li>
+</ul>
+<h3 id="弹性后效">💢弹性后效 </h3>
+<ul>
+<li><strong>一些实际晶体，在加载或卸载时，应变不是瞬时达到其平衡值</strong>，而是通过一种弛豫过程来完成其变化的。这种在弹性极限G<sub>e</sub>范围内，应变滞后于外加应力，并和时间有关的现象称为弹性后效或滞弹性。</li>
+</ul>
+<h3 id="光滑界面">💢光滑界面 </h3>
+<ul>
+<li><strong>固液两相原子存在明显的边界，固相表面为基本完整的原子密排面</strong>，所以从微观上看界面是光滑的，但在宏观上，它往往由不同位相的小平面组成，故呈台阶折线状特征，这类界面也称小平面界面。</li>
+</ul>
+<h3 id="粗糙界面">💢粗糙界面 </h3>
+<ul>
+<li><strong>界面处固液两相原子分布较为混乱而无明显边界，存在几个原子层厚度的过渡层，在过渡层中约有半数的位置被固相原子所占据</strong>。但由于过渡层很薄，从微观来看是高低不平的，从宏观来看，界面显得平直，不出现曲折的小平面。</li>
+</ul>
+<h3 id="密排面">💢密排面 </h3>
+<ul>
+<li>滑移总是沿着晶体中<strong>原子密度</strong>最大的晶面（密排面）和其上原子密度最大的晶向（密排方向）进行，这是由于密排面之间间距最大，密排方向之间的原子间距最小。因此该滑移面称为密排面，滑移方向为该面上的密排方向。</li>
+</ul>
 <h3 id="晶带轴">💢晶带轴 </h3>
 <ul>
-<li>所有平行或相交于某一晶向直线的晶面构成晶带，此直线称为晶带轴。属此晶带的晶面称为共带面。</li>
+<li>所有<strong>平行或相交于某一晶向直线的晶面</strong>构成晶带，此直线称为晶带轴。属此晶带的晶面称为共带面。</li>
 </ul>
 <h3 id="孪生">💢孪生 </h3>
 <ul>
-<li>晶体受力变形后，以产生孪晶的方式进行切边的过程称为孪生。这样的切变并未使晶体的点阵类型发生变化，但它却使均匀切边区中的晶体取向发生改变，变为与未切边区晶体呈镜面对称的取向。</li>
+<li>晶体受力变形后，以<strong>产生孪晶的方式进行切边的过程称为孪生</strong>。这样的切变并未使晶体的点阵类型发生变化，但它却使均匀切边区中的晶体取向发生改变，变为与未切边区晶体呈镜面对称的取向。</li>
 </ul>
 <h3 id="恒温转变">💢恒温转变 </h3>
 <p><img src="./index_files/2023-11-08-19-20-31.png" alt="1"></p>
@@ -44,7 +72,7 @@
 </ul>
 <h3 id="嵌段共聚物">💢嵌段共聚物 </h3>
 <ul>
-<li>每个链由单体嵌段组成，因此，这些材料称为嵌段共聚物，由单体群的链段区域与另一类单体群的链段区域组成。</li>
+<li>每个链由<strong>单体嵌段组成</strong>，因此，这些材料称为嵌段共聚物，由单体群的链段区域与另一类单体群的链段区域组成。</li>
 </ul>
 <h3 id="互扩散">💢互扩散 </h3>
 <ul>
@@ -128,11 +156,11 @@
 </ul>
 <h3 id="面密度">💢面密度 </h3>
 <ul>
-<li>晶面中某一晶面单位面积上的原子数目</li>
+<li>晶面中某一晶面<strong>单位面积上的原子数目</strong></li>
 </ul>
 <h3 id="线密度">💢线密度 </h3>
 <ul>
-<li>沿一个方向单位长度上相同阵点的数目</li>
+<li>沿一个方向<strong>单位长度上相同阵点的数目</strong></li>
 </ul>
 <h3 id="自扩散">💢自扩散 </h3>
 <ul>
@@ -149,10 +177,6 @@
 <h3 id="晶界">💢晶界 </h3>
 <ul>
 <li>多数晶体物质由晶粒所组成，<strong>属于同一固相而位向不同的晶粒间的界面</strong>称为晶界。</li>
-</ul>
-<h3 id="密排面">💢密排面 </h3>
-<ul>
-<li>滑移总是沿着晶体中原子密度最大的晶面（密排面）和其上原子密度最大的晶向（密排方向）进行，这是由于密排面之间间距最大，密排方向之间的原子间距最小。因此该滑移面称为密排面，滑移方向为该面上的密排方向。</li>
 </ul>
 <h3 id="杠杆定律">💢杠杆定律 </h3>
 <ul>
@@ -176,11 +200,11 @@
 </ul>
 <h3 id="组织">💢组织 </h3>
 <ul>
-<li>用肉眼或者显微镜所观察到的组成相的形状，分布，以及各相之间的组合状态称为组织。</li>
+<li>用肉眼或者显微镜所观察到的<strong>组成相的形状，分布，以及各相之间的组合状态</strong>称为组织。</li>
 </ul>
 <h3 id="堆垛因子">💢堆垛因子 </h3>
 <ul>
-<li>晶体结构中原子占据的体积和可利用的总体积的比率定义未堆垛因子。</li>
+<li>晶体结构中<strong>原子占据的体积和可利用的总体积的比率</strong>定义未堆垛因子。</li>
 </ul>
 <h3 id="晶粒">💢晶粒 </h3>
 <ul>
@@ -189,6 +213,10 @@
 <h3 id="有序固溶体">💢有序固溶体 </h3>
 <ul>
 <li>对某些成分接近一定原子比的无序固溶体中，它<strong>从高温缓冷到某一临界温度以下时，溶质原子会从统计随机分布状态过渡到占有一定位置的规则排列状态发生有序化过程</strong>，形成的固溶体称为有序固溶体。</li>
+</ul>
+<h3 id="无序固溶体">💢无序固溶体 </h3>
+<ul>
+<li>溶质原子<strong>随机分布在溶剂晶体点阵的任意位置</strong>的固溶体</li>
 </ul>
 <h3 id="相图">💢相图 </h3>
 <ul>
@@ -216,6 +244,78 @@
 </ul>
 <h2 id="简答题">🎈简答题 </h2>
 <p>①②③④⑤⑥</p>
+<h3 id="位错的增值方式">🔎位错的增值方式 </h3>
+<ul>
+<li>（1）<strong>弗兰克-里德位错增殖机制</strong>
+<ul>
+<li>①若某滑移面上有一段刃型位错AB，它的两端被<strong>位错网结点钉住</strong>，不能运动。</li>
+<li>②现沿位错b方向加切应力，使位错沿滑移面向前滑移运动。但由于AB两端固定，所以只能使位错线<strong>发生弯曲</strong>。</li>
+<li>③单位长度位错线所受的滑移力总是与位错线本身垂直， 以弯曲后的位错每一小段继续受到力的作用，<strong>沿它的法线方向向外扩展，其两端则分别绕结点A，B发生回转</strong>。</li>
+<li>④当两端弯出来的线段相互靠近时，由于该两线段平行于b，但位错线方向相反，分别属于左螺旋和右螺旋位错，<strong>它们互相抵消，形成一闭合的位错环和位错环内的一小段弯曲位错线</strong>。</li>
+<li>⑤只要外加应力继续作用，位错环便继续向外扩张，同时环内的弯曲位错在线张力作用下又被拉直，恢复到原始状态，并<strong>重复以前的运动</strong>，络绎不绝地产生新的位错环，从而造成位错的增殖，并使晶体产生可观的滑移量。</li>
+</ul>
+</li>
+<li>（2）<strong>双交滑移机制</strong>
+<ul>
+<li>通过滑移产生刃型割阶，由于刃型割阶垂直于滑移面，即相当于被钉扎，产生一个弗兰克—里德增值源</li>
+</ul>
+</li>
+</ul>
+<h3 id="成分过冷是怎样产生的对最终凝固组织有什么影响">🔎成分过冷是怎样产生的？对最终凝固组织有什么影响？ </h3>
+<ul>
+<li>在合金的凝固过程中，由于液相中<strong>溶质的分布发生变化而改变了凝固温度</strong>，这可由相图中的液相线来确定，因此，将<strong>界面前沿液体中的实际温度低于由溶质分布所决定的凝固温度时产生的过冷</strong>，称为成分过冷。</li>
+<li>影响：当在液-固界面前沿有较小的成分过冷区时，平面生长就被破坏。界面某些地方的凸起，在它们进入过冷区后，由于过冷度稍有增加，促进了它们进一步凸向液体，但因成分过冷区较小，凸起部分不可能有较大伸展，使<strong>界面形成了胞状组织</strong>。如果界面前沿的成分过冷区甚大，则凸出部分就能继续伸向过冷液相中生长，同时在侧面产生分枝，形成二次轴，在二次轴上再长出三次轴等，这样就<strong>形成树枝状组织</strong>。分别是典型的胞状组织和树枝状组织。在两种组织形态之间还存在过渡形态，即介于平面状与胞状之间的平面胞状晶，以及介于胞状与树枝晶之间的胞状树枝晶。</li>
+</ul>
+<h3 id="为什么大多数聚合物容易得到非晶结构而结晶只起次要作用">🔎为什么大多数聚合物容易得到非晶结构，而结晶只起次要作用？ </h3>
+<ul>
+<li>高聚物的结晶在结构上存在以下两方面困难：
+<ul>
+<li>①大分子的结晶<strong>很少有简单的基元</strong>。</li>
+<li>②已有的链段在不断开键，在不重新形成的条件下，要实现规则重排只能通过所有链段的缓慢扩散来完成。因此，细长、柔软而结构复杂的高分子链很难形成完整的晶体。大多数聚合物容易得到非晶结构，结晶只起次要作用。</li>
+</ul>
+</li>
+</ul>
+<h3 id="晶体中的位错是怎样产生的">🔎晶体中的位错是怎样产生的？ </h3>
+<ul>
+<li>（1）晶体凝固过程中产生的位错：
+<ul>
+<li>①由于熔体中<strong>杂质原子在凝固过程中不均匀分布</strong>使晶体先后凝固部分的成分不同，从而点阵常数也有差异，形成的位错可能作为过渡</li>
+<li>②由于温度梯度、浓度梯度、机械振动等的影响，致使<strong>生长着的晶体偏转或弯曲引起相邻晶块之间有位相差</strong>，它们之间就会形成位错</li>
+<li>③在晶体生长过程中，由于相邻晶粒发生碰撞或因液流冲击，以及冷却时体积变化的热应力等原因，会使<strong>晶体表面产生台阶或受力变形</strong>而形成位错。</li>
+</ul>
+</li>
+<li>(2)由于自高温较快凝固及冷却时，晶体内存在大量<strong>过饱和空位</strong>，空位的聚集能形成位错。</li>
+<li>(3)晶体内部的某些界面(如第二相质点、李晶、晶界等)和微裂纹的附近，由于热应力和组织应力的作用，往往出现应力集中现象，当此应力高至足以使该局部区域发生滑移时，就在该区域产生位错。</li>
+</ul>
+<h3 id="退火过程的三个阶段">🔎退火过程的三个阶段 </h3>
+<ul>
+<li>（1）<strong>回复</strong>
+<ul>
+<li>回复是指在新的无畸变晶粒产生之前所产生的亚结构和性能变化的阶段；在回复阶段，由于不发生大角度晶界的迁移，所以晶粒的形状和大小与变形态的相同，仍保持着<strong>纤维状或扁平状</strong>，从光学显微组织上几乎看不出变化。</li>
+</ul>
+</li>
+<li>（2）<strong>再结晶</strong>
+<ul>
+<li>是指出现无畸变的等轴新晶粒逐步取代变形晶粒的过程。在再结晶阶段，首先是在畸变度大的区域产生新的无畸变晶粒的核心，然后逐渐消耗周围的变形基体而长大，直到形变组织完全改组为新的、无畸变的细等轴晶粒为止。</li>
+</ul>
+</li>
+<li>（3）<strong>晶粒长大</strong>
+<ul>
+<li>是指再结晶结束之后晶粒的继续长大。晶粒长大阶段在晶界表面能的驱动下，新晶粒互相吞食而长大，从而得到一个在该条件下较为稳定的尺寸，这称为晶粒长大阶段。</li>
+</ul>
+</li>
+</ul>
+<h3 id="位错线上的割阶和扭折是如何产生的各具有什么特点">🔎位错线上的割阶和扭折是如何产生的？各具有什么特点？ </h3>
+<ul>
+<li>当一位错在某一滑移面上运动时，会与穿过滑移面的其他位错交割。在位错的滑移运动过程中，其位错线往往很难同时实现全长的运动。因而<strong>一个运动的位错线，特别是在受到阻碍的情况下，有可能通过其中一部分线段(n个原子间距)首先进行滑移</strong>。若由此形成的曲折线段就在位错的滑移面上时，称为扭折；若该曲折线段垂直于位错的滑移面时，称为割阶。扭折和割阶也可由位错之间交割而形成。</li>
+<li>特点：刃型位错的割阶部分仍为刃型位错，而扭折部分则为螺型位错；螺型位错中的扭折和割阶线段，由于均与柏氏矢量相垂直，故均属于刃型位错。</li>
+</ul>
+<h3 id="为什么点缺陷在一定温度下都有一定的平衡浓度并且间隙原子的平衡浓度比空位的平衡浓度低的多">🔎为什么点缺陷在一定温度下都有一定的平衡浓度，并且间隙原子的平衡浓度比空位的平衡浓度低的多？ </h3>
+<ul>
+<li>①点缺陷的存在一方面造成点阵畸变，使晶体的内能升高，降低了其热力学稳定性；另一方面增大了原子排列的混乱程度，使晶体值增大，增加了其热力学稳定性。这两个因素综合使得晶体中的点缺陷在一定的温度下有一定的平衡浓度。因此点缺陷是热力学稳定的缺陷。</li>
+<li>②在一般的晶体中<strong>间隙原子的形成能△E<sub>v</sub> 较大(约为空位形成能△E<sub>v</sub>的3~4倍)</strong>。而且间隙原子会造成<strong>更大的点阵畸变</strong>，破坏晶体结构的有序度，因此，在同一温度下，晶体中间隙原子的平衡浓度要比空位的平衡浓度低得多。</li>
+</ul>
+<p><img src="./index_files/2023-11-05-19-35-45.png" alt="1"></p>
 <h3 id="小角度晶界的结构">🔎小角度晶界的结构 </h3>
 <ul>
 <li><strong>对称倾斜晶界</strong>
@@ -296,7 +396,7 @@
 </ul>
 <h4 id="2亚晶形核">（2）亚晶形核 </h4>
 <ul>
-<li>一般在大的变形度下发生。当变形度较大时，晶体中的位错不断增殖，由位错缠结组成胞状结构胞状结构在加热过程中发生胞壁平直化，并形成亚晶借助亚晶作为再结晶的核心，其形核机制又可分为以下两种：</li>
+<li>一般在大的变形度下发生。当变形度较大时，晶体中的位错不断增殖，由位错缠结组成胞状结构胞状结构在加热过程中发生胞壁平直化，并形成亚晶。借助亚晶作为再结晶的核心，其形核机制又可分为以下两种：</li>
 <li>①<strong>亚晶合并机制</strong>
 <ul>
 <li>在变形程度较大且具有高层错能的金属中发生。</li>
