--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0096)file:///C:/Users/%E6%80%92%E6%98%9F/AppData/Local/Temp/crossnote20231010-2092-1b8fiq.mmx9lj.html -->
+<!-- saved from url=(0096)file:///C:/Users/%E6%80%92%E6%98%9F/AppData/Local/Temp/crossnote20231011-8136-191zfrc.fc4th.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>真题知识点</title>
       
@@ -285,7 +285,7 @@
 </ul>
 </li>
 <li>(2)由于自高温较快凝固及冷却时，晶体内存在大量<strong>过饱和空位</strong>，空位的聚集能形成位错。</li>
-<li>(3)晶体内部的某些界面(如第二相质点、李晶、晶界等)和微裂纹的附近，由于热应力和组织应力的作用，往往出现应力集中现象，当此应力高至足以使该局部区域发生滑移时，就在该区域产生位错。</li>
+<li>(3)晶体内部的某些界面(如第二相质点、孪晶、晶界等)和微裂纹的附近，由于热应力和组织应力的作用，往往出现应力集中现象，当此应力高至足以使该局部区域发生滑移时，就在该区域产生位错。</li>
 </ul>
 <h3 id="退火过程的三个阶段">🔎退火过程的三个阶段 </h3>
 <ul>
