--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0096)file:///C:/Users/%E6%80%92%E6%98%9F/AppData/Local/Temp/crossnote20231011-8136-191zfrc.fc4th.html -->
+<!-- saved from url=(0096)file:///C:/Users/%E6%80%92%E6%98%9F/AppData/Local/Temp/crossnote20231016-11200-zbcdz6.uo36o.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>真题知识点</title>
       
@@ -28,6 +28,18 @@
       
 <h1 id="背">🙄背 </h1>
 <h2 id="名词解释">🎈名词解释 </h2>
+<h3 id="link">💢link </h3>
+<ul>
+<li>
+<p><a href="https://mp.weixin.qq.com/s/ETzBmrqsumebBH0eObUaew"><strong>体心立方</strong></a></p>
+</li>
+<li>
+<p><a href="https://mp.weixin.qq.com/s/2yQxNKoXkBveuJcTJN-e-w"><strong>面心立方</strong></a></p>
+</li>
+<li>
+<p><a href="https://mp.weixin.qq.com/s/mCJ31aFhs3msK8QXqpF6Bw"><strong>间隙</strong></a></p>
+</li>
+</ul>
 <h3 id="反应扩散">💢反应扩散 </h3>
 <ul>
 <li>当某种元素通过扩散，自金属表面向内部渗透时，若该扩散元素的含量超过基体金属的溶解度，则<strong>随着扩散的进行会在金属表层形成中间相(也可能是另一种固溶体)</strong>，这种通过扩散形成新相的现象称为反应扩散或相变扩散。</li>
@@ -244,96 +256,6 @@
 </ul>
 <h2 id="简答题">🎈简答题 </h2>
 <p>①②③④⑤⑥</p>
-<h3 id="位错的增值方式">🔎位错的增值方式 </h3>
-<ul>
-<li>（1）<strong>弗兰克-里德位错增殖机制</strong>
-<ul>
-<li>①若某滑移面上有一段刃型位错AB，它的两端被<strong>位错网结点钉住</strong>，不能运动。</li>
-<li>②现沿位错b方向加切应力，使位错沿滑移面向前滑移运动。但由于AB两端固定，所以只能使位错线<strong>发生弯曲</strong>。</li>
-<li>③单位长度位错线所受的滑移力总是与位错线本身垂直， 以弯曲后的位错每一小段继续受到力的作用，<strong>沿它的法线方向向外扩展，其两端则分别绕结点A，B发生回转</strong>。</li>
-<li>④当两端弯出来的线段相互靠近时，由于该两线段平行于b，但位错线方向相反，分别属于左螺旋和右螺旋位错，<strong>它们互相抵消，形成一闭合的位错环和位错环内的一小段弯曲位错线</strong>。</li>
-<li>⑤只要外加应力继续作用，位错环便继续向外扩张，同时环内的弯曲位错在线张力作用下又被拉直，恢复到原始状态，并<strong>重复以前的运动</strong>，络绎不绝地产生新的位错环，从而造成位错的增殖，并使晶体产生可观的滑移量。</li>
-</ul>
-</li>
-<li>（2）<strong>双交滑移机制</strong>
-<ul>
-<li>通过滑移产生刃型割阶，由于刃型割阶垂直于滑移面，即相当于被钉扎，产生一个弗兰克—里德增值源</li>
-</ul>
-</li>
-</ul>
-<h3 id="成分过冷是怎样产生的对最终凝固组织有什么影响">🔎成分过冷是怎样产生的？对最终凝固组织有什么影响？ </h3>
-<ul>
-<li>在合金的凝固过程中，由于液相中<strong>溶质的分布发生变化而改变了凝固温度</strong>，这可由相图中的液相线来确定，因此，将<strong>界面前沿液体中的实际温度低于由溶质分布所决定的凝固温度时产生的过冷</strong>，称为成分过冷。</li>
-<li>影响：当在液-固界面前沿有较小的成分过冷区时，平面生长就被破坏。界面某些地方的凸起，在它们进入过冷区后，由于过冷度稍有增加，促进了它们进一步凸向液体，但因成分过冷区较小，凸起部分不可能有较大伸展，使<strong>界面形成了胞状组织</strong>。如果界面前沿的成分过冷区甚大，则凸出部分就能继续伸向过冷液相中生长，同时在侧面产生分枝，形成二次轴，在二次轴上再长出三次轴等，这样就<strong>形成树枝状组织</strong>。分别是典型的胞状组织和树枝状组织。在两种组织形态之间还存在过渡形态，即介于平面状与胞状之间的平面胞状晶，以及介于胞状与树枝晶之间的胞状树枝晶。</li>
-</ul>
-<h3 id="为什么大多数聚合物容易得到非晶结构而结晶只起次要作用">🔎为什么大多数聚合物容易得到非晶结构，而结晶只起次要作用？ </h3>
-<ul>
-<li>高聚物的结晶在结构上存在以下两方面困难：
-<ul>
-<li>①大分子的结晶<strong>很少有简单的基元</strong>。</li>
-<li>②已有的链段在不断开键，在不重新形成的条件下，要实现规则重排只能通过所有链段的缓慢扩散来完成。因此，细长、柔软而结构复杂的高分子链很难形成完整的晶体。大多数聚合物容易得到非晶结构，结晶只起次要作用。</li>
-</ul>
-</li>
-</ul>
-<h3 id="晶体中的位错是怎样产生的">🔎晶体中的位错是怎样产生的？ </h3>
-<ul>
-<li>（1）晶体凝固过程中产生的位错：
-<ul>
-<li>①由于熔体中<strong>杂质原子在凝固过程中不均匀分布</strong>使晶体先后凝固部分的成分不同，从而点阵常数也有差异，形成的位错可能作为过渡</li>
-<li>②由于温度梯度、浓度梯度、机械振动等的影响，致使<strong>生长着的晶体偏转或弯曲引起相邻晶块之间有位相差</strong>，它们之间就会形成位错</li>
-<li>③在晶体生长过程中，由于相邻晶粒发生碰撞或因液流冲击，以及冷却时体积变化的热应力等原因，会使<strong>晶体表面产生台阶或受力变形</strong>而形成位错。</li>
-</ul>
-</li>
-<li>(2)由于自高温较快凝固及冷却时，晶体内存在大量<strong>过饱和空位</strong>，空位的聚集能形成位错。</li>
-<li>(3)晶体内部的某些界面(如第二相质点、孪晶、晶界等)和微裂纹的附近，由于热应力和组织应力的作用，往往出现应力集中现象，当此应力高至足以使该局部区域发生滑移时，就在该区域产生位错。</li>
-</ul>
-<h3 id="退火过程的三个阶段">🔎退火过程的三个阶段 </h3>
-<ul>
-<li>（1）<strong>回复</strong>
-<ul>
-<li>回复是指在新的无畸变晶粒产生之前所产生的亚结构和性能变化的阶段；在回复阶段，由于不发生大角度晶界的迁移，所以晶粒的形状和大小与变形态的相同，仍保持着<strong>纤维状或扁平状</strong>，从光学显微组织上几乎看不出变化。</li>
-</ul>
-</li>
-<li>（2）<strong>再结晶</strong>
-<ul>
-<li>是指出现无畸变的等轴新晶粒逐步取代变形晶粒的过程。在再结晶阶段，首先是在畸变度大的区域产生新的无畸变晶粒的核心，然后逐渐消耗周围的变形基体而长大，直到形变组织完全改组为新的、无畸变的细等轴晶粒为止。</li>
-</ul>
-</li>
-<li>（3）<strong>晶粒长大</strong>
-<ul>
-<li>是指再结晶结束之后晶粒的继续长大。晶粒长大阶段在晶界表面能的驱动下，新晶粒互相吞食而长大，从而得到一个在该条件下较为稳定的尺寸，这称为晶粒长大阶段。</li>
-</ul>
-</li>
-</ul>
-<h3 id="位错线上的割阶和扭折是如何产生的各具有什么特点">🔎位错线上的割阶和扭折是如何产生的？各具有什么特点？ </h3>
-<ul>
-<li>当一位错在某一滑移面上运动时，会与穿过滑移面的其他位错交割。在位错的滑移运动过程中，其位错线往往很难同时实现全长的运动。因而<strong>一个运动的位错线，特别是在受到阻碍的情况下，有可能通过其中一部分线段(n个原子间距)首先进行滑移</strong>。若由此形成的曲折线段就在位错的滑移面上时，称为扭折；若该曲折线段垂直于位错的滑移面时，称为割阶。扭折和割阶也可由位错之间交割而形成。</li>
-<li>特点：刃型位错的割阶部分仍为刃型位错，而扭折部分则为螺型位错；螺型位错中的扭折和割阶线段，由于均与柏氏矢量相垂直，故均属于刃型位错。</li>
-</ul>
-<h3 id="为什么点缺陷在一定温度下都有一定的平衡浓度并且间隙原子的平衡浓度比空位的平衡浓度低的多">🔎为什么点缺陷在一定温度下都有一定的平衡浓度，并且间隙原子的平衡浓度比空位的平衡浓度低的多？ </h3>
-<ul>
-<li>①点缺陷的存在一方面造成点阵畸变，使晶体的内能升高，降低了其热力学稳定性；另一方面增大了原子排列的混乱程度，使晶体值增大，增加了其热力学稳定性。这两个因素综合使得晶体中的点缺陷在一定的温度下有一定的平衡浓度。因此点缺陷是热力学稳定的缺陷。</li>
-<li>②在一般的晶体中<strong>间隙原子的形成能△E<sub>v</sub> 较大(约为空位形成能△E<sub>v</sub>的3~4倍)</strong>。而且间隙原子会造成<strong>更大的点阵畸变</strong>，破坏晶体结构的有序度，因此，在同一温度下，晶体中间隙原子的平衡浓度要比空位的平衡浓度低得多。</li>
-</ul>
-<p><img src="./index_files/2023-11-05-19-35-45.png" alt="1"></p>
-<h3 id="小角度晶界的结构">🔎小角度晶界的结构 </h3>
-<ul>
-<li><strong>对称倾斜晶界</strong>
-<ul>
-<li>对称倾斜晶界可看作把晶界两侧晶体互相倾斜的结果。其晶界可看成是<strong>由一列平行的刃型位错所构成</strong>。</li>
-</ul>
-</li>
-<li><strong>不对称倾斜晶界</strong>
-<ul>
-<li>如果倾斜晶界的界面绕x轴转了一角度，则两晶粒之间的位向差仍为0角，但晶界的界面对于两个晶粒是不对称的，称为不对称倾斜晶界。该晶界结构可看成<strong>由两组伯氏矢量相互垂直的刃位错交错排列构成</strong>。</li>
-</ul>
-</li>
-<li><strong>扭转晶界</strong>
-<ul>
-<li>可看成是两部分晶体绕某一轴在一个共同的晶面上相对扭转一个A角所构成的，扭转轴垂直于这一共同的晶面。扭转晶界的结构可看成是<strong>由互相交叉的螺型位错所组成</strong>。</li>
-</ul>
-</li>
-</ul>
 <h3 id="枝晶偏析会对材料的性能产生哪些不利的影响如何消除">🔎枝晶偏析会对材料的性能产生哪些不利的影响？如何消除 </h3>
 <ul>
 <li>（1）<strong>枝晶偏析</strong>是由非平衡凝固造成的，这使先凝固的枝干和后凝固的枝干间的成分不均匀。合金通常以树枝状生长，一棵树枝晶就形成一颗晶粒，因此枝晶偏析在一个晶粒范围内，故也称为晶内偏析</li>
@@ -494,7 +416,8 @@
 </li>
 <li>②<strong>几何异构</strong>
 <ul>
-<li><strong>双烯类单体 1，4加成时，高分子链每一个单元中有一个内双键，可构成顺势和反式两种构型，称为几何异构体。</strong></li>
+<li>两个相同原子或集团在双键或环的同侧的为顺式结构</li>
+<li>两个相同原子或集团在双键或环的两侧的为反式结构</li>
 </ul>
 </li>
 </ul>
@@ -861,6 +784,96 @@
 </ul>
 </li>
 </ul>
+<h3 id="位错的增值方式">🔎位错的增值方式 </h3>
+<ul>
+<li>（1）<strong>弗兰克-里德位错增殖机制</strong>
+<ul>
+<li>①若某滑移面上有一段刃型位错AB，它的两端被<strong>位错网结点钉住</strong>，不能运动。</li>
+<li>②现沿位错b方向加切应力，使位错沿滑移面向前滑移运动。但由于AB两端固定，所以只能使位错线<strong>发生弯曲</strong>。</li>
+<li>③单位长度位错线所受的滑移力总是与位错线本身垂直， 以弯曲后的位错每一小段继续受到力的作用，<strong>沿它的法线方向向外扩展，其两端则分别绕结点A，B发生回转</strong>。</li>
+<li>④当两端弯出来的线段相互靠近时，由于该两线段平行于b，但位错线方向相反，分别属于左螺旋和右螺旋位错，<strong>它们互相抵消，形成一闭合的位错环和位错环内的一小段弯曲位错线</strong>。</li>
+<li>⑤只要外加应力继续作用，位错环便继续向外扩张，同时环内的弯曲位错在线张力作用下又被拉直，恢复到原始状态，并<strong>重复以前的运动</strong>，络绎不绝地产生新的位错环，从而造成位错的增殖，并使晶体产生可观的滑移量。</li>
+</ul>
+</li>
+<li>（2）<strong>双交滑移机制</strong>
+<ul>
+<li>通过滑移产生刃型割阶，由于刃型割阶垂直于滑移面，即相当于被钉扎，产生一个弗兰克—里德增值源</li>
+</ul>
+</li>
+</ul>
+<h3 id="成分过冷是怎样产生的对最终凝固组织有什么影响">🔎成分过冷是怎样产生的？对最终凝固组织有什么影响？ </h3>
+<ul>
+<li>在合金的凝固过程中，由于液相中<strong>溶质的分布发生变化而改变了凝固温度</strong>，这可由相图中的液相线来确定，因此，将<strong>界面前沿液体中的实际温度低于由溶质分布所决定的凝固温度时产生的过冷</strong>，称为成分过冷。</li>
+<li>影响：当在液-固界面前沿有较小的成分过冷区时，平面生长就被破坏。界面某些地方的凸起，在它们进入过冷区后，由于过冷度稍有增加，促进了它们进一步凸向液体，但因成分过冷区较小，凸起部分不可能有较大伸展，使<strong>界面形成了胞状组织</strong>。如果界面前沿的成分过冷区甚大，则凸出部分就能继续伸向过冷液相中生长，同时在侧面产生分枝，形成二次轴，在二次轴上再长出三次轴等，这样就<strong>形成树枝状组织</strong>。分别是典型的胞状组织和树枝状组织。在两种组织形态之间还存在过渡形态，即介于平面状与胞状之间的平面胞状晶，以及介于胞状与树枝晶之间的胞状树枝晶。</li>
+</ul>
+<h3 id="为什么大多数聚合物容易得到非晶结构而结晶只起次要作用">🔎为什么大多数聚合物容易得到非晶结构，而结晶只起次要作用？ </h3>
+<ul>
+<li>高聚物的结晶在结构上存在以下两方面困难：
+<ul>
+<li>①大分子的结晶<strong>很少有简单的基元</strong>。</li>
+<li>②已有的链段在不断开键，在不重新形成的条件下，要实现规则重排只能通过所有链段的缓慢扩散来完成。因此，细长、柔软而结构复杂的高分子链很难形成完整的晶体。大多数聚合物容易得到非晶结构，结晶只起次要作用。</li>
+</ul>
+</li>
+</ul>
+<h3 id="晶体中的位错是怎样产生的">🔎晶体中的位错是怎样产生的？ </h3>
+<ul>
+<li>（1）晶体凝固过程中产生的位错：
+<ul>
+<li>①由于熔体中<strong>杂质原子在凝固过程中不均匀分布</strong>使晶体先后凝固部分的成分不同，从而点阵常数也有差异，形成的位错可能作为过渡</li>
+<li>②由于温度梯度、浓度梯度、机械振动等的影响，致使<strong>生长着的晶体偏转或弯曲引起相邻晶块之间有位相差</strong>，它们之间就会形成位错</li>
+<li>③在晶体生长过程中，由于相邻晶粒发生碰撞或因液流冲击，以及冷却时体积变化的热应力等原因，会使<strong>晶体表面产生台阶或受力变形</strong>而形成位错。</li>
+</ul>
+</li>
+<li>(2)由于自高温较快凝固及冷却时，晶体内存在大量<strong>过饱和空位</strong>，空位的聚集能形成位错。</li>
+<li>(3)晶体内部的某些界面(如第二相质点、孪晶、晶界等)和微裂纹的附近，由于热应力和组织应力的作用，往往出现应力集中现象，当此应力高至足以使该局部区域发生滑移时，就在该区域产生位错。</li>
+</ul>
+<h3 id="退火过程的三个阶段">🔎退火过程的三个阶段 </h3>
+<ul>
+<li>（1）<strong>回复</strong>
+<ul>
+<li>回复是指在新的无畸变晶粒产生之前所产生的亚结构和性能变化的阶段；在回复阶段，由于不发生大角度晶界的迁移，所以晶粒的形状和大小与变形态的相同，仍保持着<strong>纤维状或扁平状</strong>，从光学显微组织上几乎看不出变化。</li>
+</ul>
+</li>
+<li>（2）<strong>再结晶</strong>
+<ul>
+<li>是指出现无畸变的等轴新晶粒逐步取代变形晶粒的过程。在再结晶阶段，首先是在畸变度大的区域产生新的无畸变晶粒的核心，然后逐渐消耗周围的变形基体而长大，直到形变组织完全改组为新的、无畸变的细等轴晶粒为止。</li>
+</ul>
+</li>
+<li>（3）<strong>晶粒长大</strong>
+<ul>
+<li>是指再结晶结束之后晶粒的继续长大。晶粒长大阶段在晶界表面能的驱动下，新晶粒互相吞食而长大，从而得到一个在该条件下较为稳定的尺寸，这称为晶粒长大阶段。</li>
+</ul>
+</li>
+</ul>
+<h3 id="位错线上的割阶和扭折是如何产生的各具有什么特点">🔎位错线上的割阶和扭折是如何产生的？各具有什么特点？ </h3>
+<ul>
+<li>当一位错在某一滑移面上运动时，会与穿过滑移面的其他位错交割。在位错的滑移运动过程中，其位错线往往很难同时实现全长的运动。因而<strong>一个运动的位错线，特别是在受到阻碍的情况下，有可能通过其中一部分线段(n个原子间距)首先进行滑移</strong>。若由此形成的曲折线段就在位错的滑移面上时，称为扭折；若该曲折线段垂直于位错的滑移面时，称为割阶。扭折和割阶也可由位错之间交割而形成。</li>
+<li>特点：刃型位错的割阶部分仍为刃型位错，而扭折部分则为螺型位错；螺型位错中的扭折和割阶线段，由于均与柏氏矢量相垂直，故均属于刃型位错。</li>
+</ul>
+<h3 id="为什么点缺陷在一定温度下都有一定的平衡浓度并且间隙原子的平衡浓度比空位的平衡浓度低的多">🔎为什么点缺陷在一定温度下都有一定的平衡浓度，并且间隙原子的平衡浓度比空位的平衡浓度低的多？ </h3>
+<ul>
+<li>①点缺陷的存在一方面造成点阵畸变，使晶体的内能升高，降低了其热力学稳定性；另一方面增大了原子排列的混乱程度，使晶体值增大，增加了其热力学稳定性。这两个因素综合使得晶体中的点缺陷在一定的温度下有一定的平衡浓度。因此点缺陷是热力学稳定的缺陷。</li>
+<li>②在一般的晶体中<strong>间隙原子的形成能△E<sub>v</sub> 较大(约为空位形成能△E<sub>v</sub>的3~4倍)</strong>。而且间隙原子会造成<strong>更大的点阵畸变</strong>，破坏晶体结构的有序度，因此，在同一温度下，晶体中间隙原子的平衡浓度要比空位的平衡浓度低得多。</li>
+</ul>
+<p><img src="./index_files/2023-11-05-19-35-45.png" alt="1"></p>
+<h3 id="小角度晶界的结构">🔎小角度晶界的结构 </h3>
+<ul>
+<li><strong>对称倾斜晶界</strong>
+<ul>
+<li>对称倾斜晶界可看作把晶界两侧晶体互相倾斜的结果。其晶界可看成是<strong>由一列平行的刃型位错所构成</strong>。</li>
+</ul>
+</li>
+<li><strong>不对称倾斜晶界</strong>
+<ul>
+<li>如果倾斜晶界的界面绕x轴转了一角度，则两晶粒之间的位向差仍为0角，但晶界的界面对于两个晶粒是不对称的，称为不对称倾斜晶界。该晶界结构可看成<strong>由两组伯氏矢量相互垂直的刃位错交错排列构成</strong>。</li>
+</ul>
+</li>
+<li><strong>扭转晶界</strong>
+<ul>
+<li>可看成是两部分晶体绕某一轴在一个共同的晶面上相对扭转一个θ角所构成的，扭转轴垂直于这一共同的晶面。扭转晶界的结构可看成是<strong>由互相交叉的螺型位错所组成</strong>。</li>
+</ul>
+</li>
+</ul>
 <h2 id="论述题">🎈论述题 </h2>
 <p>①②③④⑤⑥</p>
 <h3 id="扩散对材料性能-加工工艺有何影响举例两种上坡扩散">🧐扩散对材料性能、加工工艺有何影响？举例两种上坡扩散 </h3>
@@ -869,7 +882,7 @@
 <ul>
 <li>①<strong>液态金属凝固过程中</strong>，溶质原子通过扩散使得金属材料的成分区域均匀；</li>
 <li>②<strong>材料热加工过程中</strong>，如退火，将金属缓慢加热到一定温度，保持足够时间，然后以适宜速度冷却。通过溶质原子的扩散可以降低残余应力，减少变形与裂纹倾向；调整组织，消除组织缺陷。</li>
-<li>③<strong>固溶体合金在非平衡凝固时</strong>，晶内会出现枝晶偏析，对合金性能有不利影响。通常需通过均匀化扩散退火来削弱枝晶偏析。</li>
+<li>③<strong>固溶体合金在非平衡凝固时</strong>，晶内会出现枝晶偏析，对合金性能有不利影响。通常需<strong>通过均匀化扩散退火来削弱枝晶偏析</strong>。</li>
 <li>④<strong>扩散型相变</strong>，如珠光体转变过程，铁素体与渗碳体呈层片状相间分布，正是通过碳原子在奥氏体中的扩散来完成的。</li>
 </ul>
 </li>
@@ -901,7 +914,6 @@
 <li>③<strong>聚合物晶体中的杂质</strong>：有时，杂质直接合并在分子链中。如果第二类型链节的特性和大块聚合物中相似，它就可以直接合并入聚合物的晶态区域中。如果不是，杂质将会居于晶态周围的非晶态区域。</li>
 </ul>
 <h3 id="简述三种玻璃离子玻璃-共价玻璃以及金属玻璃的主要成分和形成条件">🧐简述三种玻璃（离子玻璃 共价玻璃以及金属玻璃）的主要成分和形成条件 </h3>
-<p>①②③④⑤⑥</p>
 <h3 id="1离子玻璃">（1）离子玻璃 </h3>
 <ul>
 <li>主要成分： 主要是氧化物玻璃（常见氧化物SiO<sub>2</sub>、GeO<sub>2</sub>、B<sub>2</sub>O<sub>3</sub>；、P<sub>2</sub>O<sub>5</sub>和As<sub>2</sub>O<sub>5</sub>）</li>
@@ -1267,6 +1279,22 @@
 <img src="./index_files/2023-11-05-19-58-28.png" alt="0"><br>
 <img src="./index_files/2023-11-06-07-26-09.png" alt="3"></p>
 <h3 id="误差函数解">🎲误差函数解 </h3>
+<ul>
+<li>推广到大多数的扩散问题：x<sub>ax</sub>=m(Dt)<sup>1/2</sup>
+<ul>
+<li>对于<strong>板</strong>
+<ul>
+<li>m=1</li>
+</ul>
+</li>
+<li>对于<strong>圆柱</strong>
+<ul>
+<li>m=2</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
 <h4 id="1一维无限长棒">（1）一维无限长棒 </h4>
 <p><img src="./index_files/2023-11-05-19-46-19.png" alt="1"></p>
 <ul>
@@ -1308,6 +1336,12 @@
 <li>ν：材料泊松比，表示侧向收缩能力。一般金属材料在0.25~0.35，高分子稍大一些</li>
 </ul>
 <h3 id="层错宽度和层错能">🎲层错宽度和层错能 </h3>
+<h3 id="霍尔佩奇公式">🎲霍尔佩奇公式 </h3>
+<p><img src="./index_files/2023-11-13-18-44-30.png" alt="1"></p>
+<ul>
+<li>σ<sub>0</sub>：反应晶内对变形的抗力，相当于极大单晶的屈服强度</li>
+<li>k：反应晶界对变形的影响程度</li>
+</ul>
 <p>①②③④⑤⑥<br>
 🔶♏💢🎈🧐🙃🔎🎲🏹</p>
 
