--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0094)file:///C:/Users/%E6%80%92%E6%98%9F/AppData/Local/Temp/crossnote2023118-9232-1lgtap.k6ett.html -->
+<!-- saved from url=(0094)file:///C:/Users/%E6%80%92%E6%98%9F/AppData/Local/Temp/crossnote2023119-8148-19rr39g.q5l6.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>肖四</title>
       
@@ -53,7 +53,7 @@
 </ul>
 <h4 id="3运用唯物史观原理说明调查研究为什么要坚持党的群众路线">(3)运用唯物史观原理，说明调查研究为什么要坚持党的群众路线 </h4>
 <ul>
-<li>人民群众是社会历史的主体，是历史的创造者。人民群众的总体意愿和行动代表了历史发展的方向，人民群众的社会实践最终决定历史发展的结局。人民群众是社会物质财富的创造者，是社会精神财富的创造者，是社会变革的决定力量。唯物史观关于人民群众是历史创造者的原理，要求我们坚持马克思主义群众观点，贯彻党的群众路线。群众路线的实质，就在于充分相信群众，坚决依靠群众，密切联系群众，全心全意为人民群众服务。调查研究必须坚持群众路线，自觉向群众学习、向实践学习，从人民的创造性实践中获得正确认识。</li>
+<li><strong>人民群众是社会历史的主体，是历史的创造者</strong>。人民群众的总体意愿和行动代表了历史发展的方向，人民群众的社会实践最终决定历史发展的结局。人民群众是社会物质财富的创造者，是社会精神财富的创造者，是社会变革的决定力量。唯物史观关于人民群众是历史创造者的原理，要求我们坚持马克思主义群众观点，贯彻党的群众路线。群众路线的实质，就在于充分相信群众，坚决依靠群众，密切联系群众，全心全意为人民群众服务。调查研究必须坚持群众路线，自觉向群众学习、向实践学习，从人民的创造性实践中获得正确认识。</li>
 </ul>
 <h3 id="2">2 </h3>
 <h4 id="1如何理解两个结合是我们取得成功的最大法宝或如何理解两个结合是开辟和发展中国特色社会主义的必由之路">(1)如何理解”两个结合”是“我们取得成功的最大法宝”?(或：如何理解“两个结合”是开辟和发展中国特色社会主义的必由之路?) </h4>
@@ -68,41 +68,41 @@
 <li>“第二个结合”回答了马克思主义基本原理为什么能够而且必须同中华优秀传统文化相结合的问题，回答了马克思主义基本原理如何同中华优秀传统文化相结合以及结合的结果问题，表明我们党对中国道路，理论、制度的认识达到了新高度，表明我们党的历史自信、文化自信达了新高度，表明我们党在传承中华优秀传统文化中推进文化创新的自觉性达到了新高度。</li>
 <li><strong>第一，“结合”的前提是彼此契合</strong>。马克思主义和中华优秀传统文化来源不同，但彼此存高度的契合性。相互契合才能有机结合。</li>
 <li><strong>第二，“结合”的结果是互相成就</strong>，造就了一个有机统一的新的文化生命体.让马克思主义品为中国的，中华优秀传统文化成为现代的，让经由“结合”而形成的新文化成为中国式现代化的文化形态。</li>
-<li><strong>第三，“结合”筑牢了道路根基</strong>，让中国特色社会主义道路有了更加宏阔深远的历史纵深，拓展了中国特色社会主义道路的文化根基。中国式现代化赋予中华文明以现代力量，中华文明验予中国式现代化以深厚底蕴。</li>
+<li><strong>第三，“结合”筑牢了道路根基</strong>，让中国特色社会主义道路有了更加宏阔深远的历史纵深，拓展了中国特色社会主义道路的文化根基。中国式现代化赋予中华文明以现代力量，中华文明赋予中国式现代化以深厚底蕴。</li>
 <li><strong>第四，“结合”打开了创新空间</strong>，让我们掌握了思想和文化主动，并有力地作用于道路、理论和制度；让我们能够在更广阔的文化空间中，充分运用中华优秀传统文化的宝贵资源，探索面向未来的理论和制度创新。</li>
 <li><strong>第五，“结合”巩固了文化主体性</strong>，创立习近平新时代中国特色社会主义思想就是这一文化主体性的最有力体现</li>
 </ul>
 <h3 id="3">3 </h3>
 <h4 id="1探索中国现代化道路的重任历史地落在了中国共产党身上如何理解中国式现代化是我们党领导全国各族人民在长期探索和实践中历经千辛万苦付出巨大代价取得的重大成果">(1)探索中国现代化道路的重任，历史地落在了中国共产党身上。如何理解“中国式现代化是我们党领导全国各族人民在长期探索和实践中历经千辛万苦，付出巨大代价取得的重大成果”? </h4>
 <ul>
-<li>具有5000多年文明历史的中华民族，长期走在世界前列。1840年的鸦片战争使中国逐步沦为半殖民地半封建社会。为了摆脱落后挨打、任人宰割的悲惨命运，中国人民奋起反抗，仁人志士苦苦求索，进行民族复兴的各种尝试，洋务运动试图“师夷长技以制夷”,戊戌变法试图通过改良来图强，孙中山先生领导辛亥革命试图以资产阶级共和国、振兴实业等方案来实现现代化，但都以失败告终。探索中国现代化道路的重任，历史地落在了中国共产党身上。</li>
-<li>第一，新民主主义革命时期，我们党团结带领人民进行革命斗争，取得了新民主主义革命的胜利，为实现现代化创造了根本社会条件。</li>
-<li>第二，社会主义革命和建设时期，我们党带领人民完成了社会主义革命，推进了社会主义建设，为现代化建设奠定了根本政治前提和制度基础，提供了 宝贵经验、理论准备、物质基础，</li>
-<li>第三，改革开放和社会主义现代化建设新时期，我们党作出把党和国家工作中心转移到经济建设上来、实行改革开放的历史性决策，开启了中国式现代化的新长征，为中国式现代化提供了充满新的活力的体制保证和快速发展的物质条件，</li>
-<li>第四，进入新时代，我们党围绕解决现代化建设中存在的突出矛盾和问题，不断实现理论和实践上的创新突破，成功推进和拓展了中国式现代化。</li>
+<li>具有5000多年文明历史的中华民族，长期走在世界前列。1840年的鸦片战争使中国逐步沦为半殖民地半封建社会。为了摆脱落后挨打、任人宰割的悲惨命运，中国人民奋起反抗，仁人志士苦苦求索，进行民族复兴的各种尝试，<strong>洋务运动试图“师夷长技以制夷”,戊戌变法试图通过改良来图强，孙中山先生领导辛亥革命试图以资产阶级共和国、振兴实业等方案来实现现代化，但都以失败告终</strong>。探索中国现代化道路的重任，历史地落在了中国共产党身上。</li>
+<li><strong>第一，新民主主义革命时期</strong>，我们党团结带领人民进行革命斗争，取得了新民主主义革命的胜利，为实现现代化创造了根本社会条件。</li>
+<li><strong>第二，社会主义革命和建设时期</strong>，我们党带领人民完成了社会主义革命，推进了社会主义建设，为现代化建设奠定了根本政治前提和制度基础，提供了宝贵经验、理论准备、物质基础，</li>
+<li><strong>第三，改革开放和社会主义现代化建设新时期</strong>，我们党作出把党和国家工作中心转移到经济建设上来、实行改革开放的历史性决策，开启了中国式现代化的新长征，为中国式现代化提供了充满新的活力的体制保证和快速发展的物质条件，</li>
+<li><strong>第四，进入新时代</strong>，我们党围绕解决现代化建设中存在的突出矛盾和问题，不断实现理论和实践上的创新突破，成功推进和拓展了中国式现代化。</li>
 </ul>
 <h4 id="2如何理解中国式现代化是我们强国建设-民族复兴的康庄大道也是中国谋求人类进步-世界大同的必由之路或如何理解中国式现代化是我们为如何唤醒睡狮-实现民族复兴这个重大历史课题所给出的答案">(2)如何理解中国式现代化“是我们强国建设、民族复兴的康庄大道，也是中国谋求人类进步、世界大同的必由之路”?(或：如何理解中国式现代化是我们为如何唤醒“睡狮”、实现民族复兴这个重大历史课题所给出的答案?) </h4>
 <ul>
-<li>中国式现代化既基于自身国情、又借鉴各国经验 ，既传承历史文化、又融合现代文明，是具有中国特色、符合中国实际的现代化。新中国成立特别是改革开放以来，我们用几十年时间走完西方发达国家几百年走过的工业化历程，创造了经济快速发展和社会长期稳定的奇迹，为中华民族伟大复兴开辟了广阔前景。实践证明，中国式现代化是强国建设、民族复兴的唯一正确道路中国式现代化，深深植根于中华优秀传统文化，体现科学社会主义的先进本质，借鉴吸收一切人类优秀文明成果，是一种全新的人类文明形态，</li>
-<li>中国式现代化，打破了“现代化=西方化”的迷思，展现了现代化的另一幅图景，拓展了发展中国家走向现代化的路径选择，为人类对更好社会制度的探索提供了中国方案。中国式现代化蕴含的独特世界观、价值观、历史观、文明观、民主观、生态观等及其伟大实践，是对世界现代化理论和实践的重大创新。中国式现代化为广大发展中国家独立自主迈向现代化树立了典范，为其提供了全新选择</li>
+<li>中国式现代化既基于自身国情、又借鉴各国经验 ，既传承历史文化、又融合现代文明，是具有中国特色、符合中国实际的现代化。😩新中国成立特别是改革开放以来，我们用几十年时间走完西方发达国家几百年走过的工业化历程，创造了经济快速发展和社会长期稳定的奇迹，为中华民族伟大复兴开辟了广阔前景。😩实践证明，中国式现代化是强国建设、民族复兴的唯一正确道路。中国式现代化，深深植根于中华优秀传统文化，体现科学社会主义的先进本质，借鉴吸收一切人类优秀文明成果，是一种全新的人类文明形态，</li>
+<li>中国式现代化，打破了“现代化=西方化”的迷思，展现了现代化的另一幅图景，拓展了发展中国家走向现代化的路径选择，为人类对更好社会制度的探索提供了中国方案。😩中国式现代化蕴含的独特世界观、价值观、历史观、文明观、民主观、生态观等及其伟大实践，是对世界现代化理论和实践的重大创新。😩中国式现代化为广大发展中国家独立自主迈向现代化树立了典范，为其提供了全新选择</li>
 </ul>
 <h3 id="4">4 </h3>
 <h4 id="1新征程上广大青年为什么要立志高远-脚踏实地">(1)新征程上，广大青年为什么要“立志高远、脚踏实地”? </h4>
 <ul>
-<li>志向，就是理想信念；立志，就是确立理想信念。理想信念是精神之“钙”,是人生发展的内在动力。第一，理想信念昭示奋斗目标。第二，理想信念催生前进动力。第三，理想信念提供精神支柱。第四，理想信念提高精神境界。只有树立起崇高的理想信念，才能够解答好人生的意义、奋斗的价值以及做什么样的人等重要的人生课题。志向高远，便力量无穷。 一个人有了崇高坚定的理想信念，才会以惊人的毅力和不懈的努力成就事业。</li>
-<li>理想信念是一个思想认识问题，更是一个实践问题。理想的实现往往要通过一条并不平坦的曲折之路，有赖于脚踏实地、持之以恒的奋斗。广大青年肩负实现中华民族伟大复兴的中国梦的历史重任，只有把实现理想的道路建立在脚踏实地的奋斗上，才能放飞青春梦想，实现人生理想</li>
+<li>志向，就是理想信念；立志，就是确立理想信念。理想信念是精神之“钙”,是人生发展的内在动力。<strong>第一</strong>，理想信念昭示奋斗目标。<strong>第二</strong>，理想信念催生前进动力。<strong>第三</strong>，理想信念提供精神支柱。<strong>第四</strong>，理想信念提高精神境界。只有树立起崇高的理想信念，才能够解答好人生的意义、奋斗的价值以及做什么样的人等重要的人生课题。志向高远，便力量无穷。 一个人有了崇高坚定的理想信念，才会以惊人的毅力和不懈的努力成就事业。</li>
+<li><strong>理想信念是一个思想认识问题，更是一个实践问题</strong>。理想的实现往往要通过一条并不平坦的曲折之路，有赖于脚踏实地、持之以恒的奋斗。广大青年肩负实现中华民族伟大复兴的中国梦的历史重任，只有把实现理想的道路建立在脚踏实地的奋斗上，才能放飞青春梦想，实现人生理想</li>
 </ul>
 <h4 id="2为什么说坚定理想信念不是一阵子而是一辈子的事要常修常炼-常悟常进无论顺境透境都坚贞不渝">(2)为什么说“坚定理想信念不是一阵子而是一辈子的事，要常修常炼、常悟常进，无论顺境透境都坚贞不渝”? </h4>
 <ul>
-<li>理想的实现是一个过程。理想越是远大，它的实现过程就越复杂，需要的时间也就越漫长。任何一种理想的实现都不是轻而易举的，必然会遇到各种各样的困难和波折，充满艰险和坎坷。实现理想、创造未来，必须有战胜种种艰难险阻的坚定不移的信心和坚忍不拔的毅力。</li>
-<li>理想变为现实不是一帆风顺的，往往会遭遇波澜和坎坷，既有顺境，也有逆境。顺境和逆境是人生历程中两种不同的境遇。在人生旅途中没有永远的顺境，也没有永远的逆境。无论是顺境还是逆境，对人生的作用都可能是双面的，关键是怎样去认识和对待它们。要正确对待个人成长的外部环境，处优而不养尊，受挫而不短志，使顺境逆境都成为人生的财富而不是人生的包袱。只有善于利用顺境，勇于正视逆境、战胜逆境，人生价值才能够实现。</li>
+<li><strong>理想的实现是一个过程。理想越是远大，它的实现过程就越复杂，需要的时间也就越漫长</strong>。任何一种理想的实现都不是轻而易举的，必然会遇到各种各样的困难和波折，充满艰险和坎坷。实现理想、创造未来，必须有战胜种种艰难险阻的坚定不移的信心和坚忍不拔的毅力。</li>
+<li><strong>理想变为现实不是一帆风顺的，往往会遭遇波澜和坎坷，既有顺境，也有逆境</strong>。顺境和逆境是人生历程中两种不同的境遇。在人生旅途中没有永远的顺境，也没有永远的逆境。无论是顺境还是逆境，对人生的作用都可能是双面的，关键是怎样去认识和对待它们。要正确对待个人成长的外部环境，处优而不养尊，受挫而不短志，使顺境逆境都成为人生的财富而不是人生的包袱。只有善于利用顺境，勇于正视逆境、战胜逆境，人生价值才能够实现。</li>
 </ul>
 <h4 id="3新时代中国青年应该有怎样的精气神或如何理解选择吃苦也就选择了收获选择奉献也就选择了高尚">(3)新时代中国青年应该有怎样的精气神?(或：如何理解“选择吃苦也就选择了收获，选择奉献也就选择了高尚”?) </h4>
 <ul>
-<li>青年人要树立艰苦奋斗的精神。艰苦奋斗是实现理想的重要条件。人类的美好理想都不可能唾手可得。在通向理想的道路上，在实现理想的过程中，没有艰苦奋斗的精神，理想是不会自动转化为现实的。艰苦奋斗是成就人生事业不可或缺的条件。艰苦奋斗是我们的传家宝，艰苦奋斗的精神永远不会过时。当代中国既面临着重要发展机遇，也面临着前所未有的困难和挑战。实现我们的发展目标，需要广大青年锲而不舍、驰而不息的奋斗，不断书写奉献青春的时代篇章。</li>
-<li>青年时代，选择吃苦也就选择了收获，选择奉献也就选择了高尚。真正的快乐往往由奋斗的艰苦转化而来。人世间的一切幸福都需要靠辛勤的劳动来创造。追求幸福的过程就是不满足于现状、不断追求和创造更美好生活的过程。我们要享受眼前的幸福，更要不断奋斗，创造未来的幸福，在奋斗中创造幸福人生。</li>
-<li>青年人要树立崇高的职业理想，服从社会发展的需要，把自己对职业的期望与社会的需要、现实的可能结合起来，从实际出发选择职业和工作岗位，把艰苦环境、艰巨任务作为磨炼自己的机遇，把肯吃苦、敢吃苦当作成就更好人生的选择，主动到条件艰苦的基层、国家建设的一线、项目攻关的前沿，成就一番事业。</li>
-<li>青年人要牢固树立幸福生活是靠劳动创造的观念，热爱劳动、勤勉工作，无论从事什么劳动，都要干一行、爱一行、钻一行，脚踏实地，在实践中一步步成长起来。</li>
+<li><strong>青年人要树立艰苦奋斗的精神</strong>。艰苦奋斗是实现理想的重要条件。人类的美好理想都不可能唾手可得。在通向理想的道路上，在实现理想的过程中，没有艰苦奋斗的精神，理想是不会自动转化为现实的。艰苦奋斗是成就人生事业不可或缺的条件。艰苦奋斗是我们的传家宝，艰苦奋斗的精神永远不会过时。当代中国既面临着重要发展机遇，也面临着前所未有的困难和挑战。实现我们的发展目标，需要广大青年锲而不舍、驰而不息的奋斗，不断书写奉献青春的时代篇章。</li>
+<li><strong>青年时代，选择吃苦也就选择了收获，选择奉献也就选择了高尚</strong>。真正的快乐往往由奋斗的艰苦转化而来。人世间的一切幸福都需要靠辛勤的劳动来创造。追求幸福的过程就是不满足于现状、不断追求和创造更美好生活的过程。我们要享受眼前的幸福，更要不断奋斗，创造未来的幸福，在奋斗中创造幸福人生。</li>
+<li><strong>青年人要树立崇高的职业理想</strong>，服从社会发展的需要，把自己对职业的期望与社会的需要、现实的可能结合起来，从实际出发选择职业和工作岗位，把艰苦环境、艰巨任务作为磨炼自己的机遇，把肯吃苦、敢吃苦当作成就更好人生的选择，主动到条件艰苦的基层、国家建设的一线、项目攻关的前沿，成就一番事业。</li>
+<li><strong>青年人要牢固树立幸福生活是靠劳动创造的观念</strong>，热爱劳动、勤勉工作，无论从事什么劳动，都要干一行、爱一行、钻一行，脚踏实地，在实践中一步步成长起来。</li>
 </ul>
 <h3 id="5">5 </h3>
 <h4 id="1如何理解共建一带一路汇集着人类共同发展的最大公约数走的是人间正道">(1)如何理解共建“一带一路”“汇集着人类共同发展的最大公约数”,“走的是人间正道”? </h4>
